<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"
        tools:context=".presentation.resultFragment.ResultFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_style"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/button_update_loading"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_image_view_icon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_lol_gg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_summoner_name"
                    style="@style/loading_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/circle_image_view_icon"
                    tools:text="@string/textview_summoner_name_loading" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_summoner_level"
                    style="@style/loading_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_summoner_name"
                    tools:text="@string/textview_level_loading" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_ranked_status"
                    android:layout_width="match_parent"
                    android:padding="@dimen/fab_margin"
                    android:background="@drawable/constrain_layout_rank"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintTop_toBottomOf="@id/text_view_summoner_level">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circle_image_view_rank"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_lol_gg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_rank"
                        style="@style/loading_text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toTopOf="@id/text_view_league_points"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/circle_image_view_rank"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/textview_elo_name_loading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_league_points"
                        style="@style/loading_text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@id/text_view_win_rate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/circle_image_view_rank"
                        app:layout_constraintTop_toBottomOf="@id/text_view_rank"
                        tools:text="@string/textview_win_rate_loading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_win_rate"
                        style="@style/loading_text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/circle_image_view_rank"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/circle_image_view_rank"
                        app:layout_constraintTop_toBottomOf="@id/text_view_league_points"
                        tools:text="@string/textview_LP_loading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_name_queue"
                        style="@style/loading_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_view_win_rate"
                        tools:text="@string/textview_queue_name_loading" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/layout_ranked_status"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
